# shajarah

./: .gitignore  Cargo.toml  README.md  TODO.md  flake.nix  index.html
.github/workflows/: pages.yml  rust.yml
assets/: sw.js
server/: Cargo.toml  build-egui-wasm.sh
server/.cargo/: config.toml
server/.sqlx/: query-0713b04d5c2ce49f10647232137f34054ee17ea096f5563e3e0c66efc2e693a7.json  query-0761344225d54f06b7d0a3c0edc8c1655ee6226b266538c8789d2f08430c16d1.json  query-0fe0590db741059df0ec5cacab2fbafa014678ad8b872682bf227761936829f0.json  query-11cfde94887ae7c6fb897b15ac677a9b5b7331ebd34b5c767c724a3d78d9e77b.json  query-1788b2aae0efc18e6e4d64aa22b4a264131dbcb5dbdea728156be4be4004364f.json  query-1a1b75b9be92fe7a3605de85e80130cb8096ed9b672ca8eb0de88148135774b4.json  query-29900fd544ce393bbbe344c769cdbd64f8504241511b62a09efe383629ddf06a.json  query-2d96ced70bfcb6f776c4f8d65bf00422f6a3efb1a261649f5358cdbe4463df6d.json  query-2e45974caf1b9a1bca93d5803fd6ad480ca50f5d9d3c55d3c6c06ba8ee885062.json  query-36577c24b339039cbe61ae6ee080f845be153560398515a0907aab687deb371f.json  query-37c716427f018e63c54734d4b8723b1909f90222dbcc48642878000f62ed07f0.json  query-3c5b8cee19c78d68dba063cb049a28e4e03bc44f9979aedc9530fdcd89cecbf4.json  query-3cd162fcffb1eea4ab84b33ff3f592f13babb6627f1a9909eb70c23014ad033a.json  query-3de920a9f349d1b46ae3aa12c97b7605532ca4aa6647260eebcd362d2cd43f4a.json  query-3eaa930fb3335f04dfc90a3d74ddee0d6bec24fa926f48556aaf5258e82bd4c2.json  query-461d920ef1ada1c52c20ef3b58c9915403f645d48b929828f23c0ed25820624f.json  query-5477c4e0572ab9fdcda7713f0d70711a14c2e4cb14d433db366c3af618d24c89.json  query-5816d1b549da7ed1b5823f33e52527dde0b18bcecfd30b10ab5f1291dfa75ca7.json  query-5cabbbd776da10ab49024db734b675f3c3b8cbf057593814ba1ce036d4f9df34.json  query-629805b1ef93f44e4d580ee599d9f00450e74b98d4bba8778ee68148764eb74b.json  query-6ca3d9e8f394530003c48dcabf520e654b85e3efe13d998a093b068fa3f82bed.json  query-76edd46ac49a347f8ed09197373e53261f5a093ac22723a3e66fc5c21fe587ba.json  query-7b8351bff78e5d45d12aa21d21839d779e0fc95f1ef7079f3b85150778cba9ad.json  query-7fd3b6e4b64419d7ef946c308a8dc4d83f8031b7b7095c9fa7b4b0326bf114c0.json  query-8691302e2524720672c1bf5d1722b1774183d8efa7a88335b250f39df9632e33.json  query-883fa2c6e6ed913ca50ffae0bf340ffa88290551c29432bd389716fb5fc417a1.json  query-8ada3d26f6db1053d719d308997017c6734c5a6a937632db3eb2f364e669c1a3.json  query-90443e9579bfc23bccfba3310e0a658d250dbb71abb4d746e3dabe4ea2afdafe.json  query-9b55da587c38bfa7a484bb1b204d7cf1be538fa93d9371a02c81492fa898e2ee.json  query-9ce02f0f65851621f9bec6db8ba3d5dd212714ba39db849be4ef1eafa5446bce.json  query-a5ccaeb9e9f00994aa1a57aa12ba8033fe853ded9decd78c6383fc61d8b7bd7d.json  query-b74a9032718b3c89077fef35d15a5134704c7ea3bb8490ecb96fe7bb2f005751.json  query-b8c891d282f5997ed3ec6b58d21fbdf120f6859b4e6a6da1f903ed9699ae16ef.json  query-bbeff6deade8e896bb92707f45e22643b7a29123168b7309e3d25e7edc75bada.json  query-cec7ec7e5b50872509a2ef2a5cda4f9fe3aaf6dce303f96ed877c907ac31dd09.json  query-d000c3c367a8e789d3a64982d2df80719bf45290ce71f0d4d99e0211576a99f1.json  query-d2571522020abca7d2056b2dd1b49d3c01c862e065a46500b48b101c1fe731a2.json  query-d31737eaf2f019c57483af628ef19e10d953db6d6b0c747ee2e02ed04b59278a.json  query-d3b451ac22c9738b397f89971cfe05489e7e873b5dcbee49731521d9e14f9f36.json  query-d3e92179c9f5d458bbda7d0344312c0bc4ec561a858059b3a992387e87e7f2ea.json  (+9 more)
server/migrations/: 20240723184651_create-members-table.sql  20240728183921_create-users-table.sql  20240728184038_create-sessions-table.sql  20240810213510_add-personal_info-field-to-members-table.sql  20250411110509_create-member-add-requests-table.sql  20250731201727_create-member-invite-table.sql  20250731214250_add-email-to-members-table.sql  20250802215753_remove-username.sql  20250803184937_add-totp_secret-column-to-users-table.sql
server/src/: auth.rs  lib.rs  main.rs
server/src/api/: members.rs  mod.rs
server/src/api/members/: members.rs  mod.rs  models.rs  routes.rs
server/src/api/sessions/: mod.rs
server/src/api/users/: mod.rs  models.rs  routes.rs
server/src/pages/: mod.rs
server/src/sessions/: models.rs
server/src/users/: models.rs  routes.rs
server/templates/: 404.html  500.html  add-request.html  admin.html  base.html  home.html  homepage.html  invite.html  login.html  macros.html  members-login.html  register.html  user-page.html
src/: app.rs  lib.rs  main.rs  tree.rs  zoom.rs
src/tree/: draw.rs  layout.rs  mod.rs
