[package]
name = "shajarah"
version = "0.1.0"
authors = ["Salman Abuhaimed <salman.f.abuhaimed@gmail.com>"]
edition = "2024"
include = ["LICENSE-APACHE", "LICENSE-MIT", "**/*.rs", "Cargo.toml"]
rust-version = "1.88"

[workspace]
members = [
    "server"
]

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu", "wasm32-unknown-unknown"]

[workspace.dependencies]
# You only need serde if you want app persistence:
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.120"
indexmap = { version = "2.3.0", features = ["serde"] }
anyhow = "1.0.86"
chrono = { version = "0.4.38", features = ["serde"] }
log = "0.4"

[dependencies]
log = { workspace = true }

serde = { workspace = true }
lazy_static = "1.5.0"
ar-reshaper = "1.5.0"
unicode-bidi = "0.3.18"
egui_extras = { version = "0.32", features = ["image", "http"] }
image = { version = "0.25", features = ["jpeg", "png", "webp"] }
ehttp = { version = "0.5.0", features = ["json"] }
serde_json = { workspace = true, features = ["preserve_order"] }
anyhow = { workspace = true }
chrono = { workspace = true }
indexmap = { workspace = true }

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.10"
eframe = { version = "0.32", default-features = false, features = [
    "accesskit",
    "default_fonts",
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    # "persistence",   # Enable restoring app state when restarting the app.
    "wayland",
    "x11",
    # "wgpu",
] }

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
eframe = { version = "0.32", default-features = false, features = [
    "accesskit",     # Make egui compatible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    # "persistence",   # Enable restoring app state when restarting the app.
    "web_screen_reader",
    # "wgpu",
] }

# to access the DOM (to hide the loading text)
[target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
version = "0.3.4"

[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2


[patch.crates-io]
# eframe = { git = "https://github.com/emilk/egui", branch = "master" }
# egui = { git = "https://github.com/emilk/egui", branch = "master" }
# egui_extras = { git = "https://github.com/emilk/egui", branch = "master" }

# If you fork https://github.com/emilk/egui you can test with:
# egui = { path = "../egui/crates/egui" }
# eframe = { path = "../egui/crates/eframe" }

[features]
debug-ui = []
