[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
axum = { version = "0.7.5", features = ["macros"] }
chrono = { version = "0.4.38", features = ["serde"] }
dotenvy = "0.15.7"
env_logger = "0.11.4"
log = "0.4.22"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
sqlx = { version = "0.8", features = [ "runtime-tokio", "tls-rustls", "postgres", "chrono" ] }
tokio = { version = "1.38.1", features = ["full"] }
tower-http = { version = "0.5.0", features = ["cors"] }
