[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
argon2 = { version = "0.5.3", features = ["std"] }
askama = { version = "0.12.1", features = ["with-axum", "serde-json"] }
askama_axum = "0.4.0"
async-trait = "0.1.81"
axum = { version = "0.7.5", features = ["macros", "multipart"] }
base64 = "0.22.1"
chrono = { workspace = true }
clap = { version = "4.5.15", features = ["derive"] }
csv = "1.3.0"
dotenvy = "0.15.7"
env_logger = "0.11.4"
indexmap = { workspace = true }
log = { workspace = true }
rand = "0.8.5"
serde = { workspace = true }
serde_json = { workspace = true, features = ["raw_value"] }
sqlx = { version = "0.8", features = [ "runtime-tokio", "tls-rustls", "postgres", "chrono", "uuid" ] }
thiserror = "1.0.63"
time = "0.3.36"
tokio = { version = "1.38.1", features = ["full"] }
toml = "0.8.16"
tower-cookies = { version = "0.10.0", features = ["private"] }
tower-http = { version = "0.5.0", features = ["cors", "limit", "fs"] }
uuid = { version = "1.10.0", features = ["serde", "v4"] }
